--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
       <link href="<%= htmlWebpackPlugin.options.cdn.css[i] %>" rel="stylesheet" />
 	  <% } %> -->
     <title><%= webpackConfig.name %></title>
+    <!--本地瑞信api-->
+    <script src="./../static/ruixin/RuixinOpenAPI.js"></script>
   </head>
   <body>
     <noscript>
